"Render emitter" option for hair is ignored in Cycles #36962

Closed
opened 2013-10-05 03:33:39 +02:00 by Jason Clarke · 5 comments

%%%--- Operating System, Graphics card ---
Mac OS X 10.8.5 AMD 5770

- Blender version with error, and version that worked ---

r60551, 2.67 definitely worked, I believe 2.68 did as well.

- Short description of error ---

Cycles will always render hair emitters, even if you disable render emitter in particle settings. This didn't used to be the case.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

.blend with a simple particle system is attached. Open it and hit render, the fur plane is mysteriously visible.
%%%

%%%--- Operating System, Graphics card --- Mac OS X 10.8.5 AMD 5770 - Blender version with error, and version that worked --- r60551, 2.67 definitely worked, I believe 2.68 did as well. - Short description of error --- Cycles will always render hair emitters, even if you disable render emitter in particle settings. This didn't used to be the case. - Steps for others to reproduce the error (preferably based on attached .blend file) --- .blend with a simple particle system is attached. Open it and hit render, the fur plane is mysteriously visible. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed, again... Marking as Release Blocker. %%%

%%%Confirmed, again... Marking as Release Blocker. %%%

%%%Note, this was fixed in r59076, so got broken again afterwards. %%%

%%%Note, this was fixed in r59076, so got broken again afterwards. %%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36962
No description provided.