Fix #36962, "Render emitter" option for hair is ignored in Cycles. Hair particles use the hide_tris boolean to disable rendering of the emitter, but this was still ANDed with the "experimental" flag. Hair is not experimental any longer, so this has to be removed.